Bug 209622 - bustage fix for stupid compilers (Sun WS and DEC OSF1) - also remove unused configure test. r=dbaron sr=alecf