xpcom/base/nscore.h
@@ -208,7 +208,6 @@ typedef PRUint32 nsresult;
 #if defined(_MSC_VER) && (_MSC_VER>=1100)
   /* VC++ 5.0 and greater implement template specialization, 4.2 is unknown */
   #define HAVE_CPP_MODERN_SPECIALIZE_TEMPLATE_SYNTAX
-  #define HAVE_CPP_EXTERN_INSTANTIATION
 
   #define HAVE_CPP_EXPLICIT
   #define HAVE_CPP_TYPENAME
